--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,12 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
+
+# Build properties
+minecraft_version=1.12.2
+mappings_version=snapshot_20180101
+forge_version=14.23.2.2619
+major_version=1
+minor_version=0
+mod_id=cookingforblockheadsconnector
+mod_name=CookingForBlockheadsConnector
