--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 
-version = "1.0-1.9-1.11"
+version = "1.9_1.11-1.1"
 group = "vlaeh.minecraft.forge.cookingforblockheadsconnector" 
 archivesBaseName = "CookingForBlockheadsConnector"
 
